fixed navbar not aligning properly

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -15,7 +15,7 @@
 body 
 {
     font-family: 'Times New Roman', Times, serif;
-    background-color: #1b1b1b;
+    background-color: #30384c;
     color: #808080;
 }
 
